--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,12 @@ h1, h2, h3, h4, p {
   margin: 0;
 }
 
+table {
+  table-layout: fixed;
+  border-collapse: collapse;
+  border: 0;
+}
+
 .base-container {
   max-width: 1080px;
   margin: 0 auto;
@@ -262,6 +268,7 @@ h1, h2, h3, h4, p {
 }
 
 .footer {
+  padding: 20px 60px;
   background: #0E1F3B;
   color: #FFFFFF;
 }
@@ -271,15 +278,20 @@ h1, h2, h3, h4, p {
 }
 
 .footer__container {
-  display: flex;
-  align-items: center;
+  display: table-row;
   max-width: 1080px;
   margin: 0 auto;
-  padding: 20px 60px;
 }
 
 .footer__logo-wrap {
-  margin-right: 68px;
+  display: table-cell;
+  vertical-align: middle;
+  padding-right: 68px;
+}
+
+.footer__inner {
+  display: table-cell;
+  vertical-align: top;
 }
 
 .footer__logo {
@@ -296,12 +308,16 @@ h1, h2, h3, h4, p {
 }
 
 a.footer__link {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
+  display: table-row;
   font-weight: 700;
   font-size: 26px;
   line-height: 33px;
+}
+
+.footer__link span {
+  display: table-cell;
+  vertical-align: middle;
+  padding-bottom: 10px;
 }
 
 .footer__link img {
