--- a/css/main.css
+++ b/css/main.css
@@ -52,8 +52,7 @@ table {
 }
 
 .page-section__img-wrap {
-  height: 690px;
-  max-height: calc((100vh - 464px) * 0.5);
+  height: 490px;
   margin-bottom: 20px;
   border-radius: 50px;
   overflow: hidden;
@@ -104,8 +103,8 @@ table {
 
 .page-section__text-content p {
   font-weight: 400;
-  font-size: 26px;
-  line-height: 34px;
+  font-size: 24px;
+  line-height: 32px;
 }
 
 .page-section__text-content p + p {
@@ -113,6 +112,11 @@ table {
 }
 
 .page-section__advantages-columns {
+  display: table;
+  width: 100%;
+}
+
+.page-section__advantages-columns-row {
   display: table-row;
 }
 
@@ -126,7 +130,12 @@ table {
 
 .page-section__advantages-list li {
   display: table-row;
-  margin-bottom: 20px;
+}
+
+.page-section__advantages-list li p {
+  display: table-cell;
+  vertical-align: middle;
+  padding-bottom: 20px;
 }
 
 .page-section__advantages-cell {
@@ -135,9 +144,10 @@ table {
 }
 
 .page-section__advantages-icon {
-  display: flex;
-  justify-content: center;
+  display: table-cell;
+  vertical-align: middle;
   width: 48px;
+  padding-bottom: 20px;
 }
 
 .page-section__advantages-icon img {
@@ -148,11 +158,12 @@ table {
 }
 
 .page-section__columns-wrap {
-  display: flex;
+  display: table-row;
   height: 100%;
 }
 
 .page-section__column {
+  display: table-cell;
   width: 50%;
 }
 
@@ -176,27 +187,27 @@ table {
   display: flex;
   align-items: center;
   margin-bottom: 30px;
-  font-size: 24px;
-  line-height: 30px;
+  font-size: 22px;
+  line-height: 28px;
 }
 
 .page-section__advantages li p {
-  font-size: 24px;
-  line-height: 30px;
+  font-size: 22px;
+  line-height: 28px;
 }
 
 .page-section__advantages li img {
   display: block;
   flex-shrink: 0;
-  width: 45px;
+  width: 40px;
   margin-right: 20px;
 }
 
 .page-section__column-title {
   margin-bottom: 32px;
   font-weight: 400;
-  font-size: 24px;
-  line-height: 30px;
+  font-size: 22px;
+  line-height: 28px;
 }
 
 .page-section__table {
@@ -215,8 +226,8 @@ table {
   padding: 10px 20px 10px 0;
   white-space: nowrap;
   border-bottom: 0.25px solid #101F3A;
-  font-size: 22px;
-  line-height: 28px;
+  font-size: 20px;
+  line-height: 26px;
 }
 
 .page-section__table td:first-of-type {
@@ -230,22 +241,22 @@ table {
 
 .page-section__title {
   font-weight: 500;
-  font-size: 62px;
-  line-height: 78px;
+  font-size: 60px;
+  line-height: 76px;
 }
 
 .page-section__address {
   margin-bottom: 20px;
   font-style: normal;
   font-weight: 400;
-  font-size: 34px;
-  line-height: 43px;
+  font-size: 32px;
+  line-height: 40px;
 }
 
 .page-section__address-detail {
-  margin-bottom: 60px;
+  margin-bottom: 40px;
   font-weight: 400;
-  font-size: 22px;
+  font-size: 20px;
   line-height: 28px;
 }
 
@@ -279,8 +290,8 @@ table {
 .page-section__about-item p {
   margin: 0;
   font-weight: 400;
-  font-size: 32px;
-  line-height: 40px;
+  font-size: 30px;
+  line-height: 38px;
 }
 
 .page-section__about-item p + p {
@@ -323,15 +334,15 @@ table {
 .footer__desc {
   margin-bottom: 28px;
   font-weight: 400;
-  font-size: 30px;
-  line-height: 38px;
+  font-size: 28px;
+  line-height: 36px;
 }
 
 a.footer__link {
   display: table-row;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 33px;
+  font-size: 24px;
+  line-height: 30px;
 }
 
 .footer__link span {
