--- a/css/main.css
+++ b/css/main.css
@@ -43,12 +43,40 @@ table {
 }
 
 .page-section {
-  height: 100%;
-  min-height: 100vh;
 }
 
 .page-section.page-section--intro {
+  height: 1920px;
   background: #0E1F3B;
+}
+
+.page-section__intro-title {
+  height: 584px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 85px;
+  line-height: 107px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.page-section__intro-img {
+  height: 750px;
+  margin-bottom: 160px;
+  border-radius: 50px;
+  overflow: hidden;
+}
+
+.page-section__intro-img img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.page-section__intro-footer {
+  text-align: center;
 }
 
 .page-section__inner {
